--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FileManagement": {
+    "SystemFileUploads": "C:\\Users\\RC_Student_lab\\Downloads"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=labG9AEB3\\SQLEXPRESS;Initial Catalog=CLAIM_DATA.DB;Integrated Security=True;Trust Server Certificate=True;",
+    "WebApplication4ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebApplication4;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
